# rust-rendering

./: .gitignore  Cargo.toml  ReadMe.md
scenes/: three_balls.json
src/: colour.rs  configuration.rs  image.rs  main.rs
src/geometry/: mod.rs
src/image/: colour.rs  image.rs  mod.rs  rgb.rs  rgb_image.rs
src/material/: material.rs  mod.rs  texture.rs
src/maths/: consts.rs  mod.rs  ray.rs  sphere.rs  vector.rs
src/rendering/: mod.rs  raster_space.rs  render.rs  sampling.rs
src/rendering/algorithms/: gradient.rs  mod.rs  ray_tracing.rs
src/scene/: attenuation.rs  camera.rs  light.rs  material.rs  mod.rs  object.rs  scene.rs  texture.rs
src/scene/io/json/: json_camera.rs  json_colour.rs  json_light.rs  json_material.rs  json_object.rs  json_point.rs  json_scene.rs  json_texture.rs  json_vector.rs  mod.rs
