[package]
name = "rust-rendering"
version = "0.1.0"
authors = ["MrKWatkins <mrkwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
nalgebra = "*"
ncollide3d = "*"
snafu = "*"
structopt = "*"

[dev-dependencies]
approx = "*"
rstest = "*"