[package]
name = "rust-rendering"
version = "0.1.0"
authors = ["MrKWatkins <mrkwatkins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
nalgebra = "*"
ncollide3d = "*"
parking_lot = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
snafu = "*"
structopt = "*"

[dev-dependencies]
approx = "*"
rstest = "*"